fix: hero title weight on mobile

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -23,10 +23,10 @@
     .title {
       font-size: 10rem;
       font-family: var(--font-thunder);
-      font-weight: 800;
+      font-weight: 700;
       opacity: 0;
 
-      @media screen and (min-width: 780px) {
+      @media screen and (min-width: 580px) {
         font-weight: 900;
       }
     }
